Fix width shift when scrollbar becomes visible

--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,10 @@
   --font-size: 14px;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 html.dark {
   --bg-color: #050505;
   --text-color: #FCFCFC;
